first index html init

--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="pl">
   <head>
-    <body>
-      <p>Hello World</p>
-    </body>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>hw1</title>
   </head>
+  <body>
+    <header>
+      <a herf="#"> <span>Web</span>Studio</a>
+      <nav>
+        <ul>
+          <li><a herf="#">Agencja</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Kontakt</a></li>
+        </ul>
+      </nav>
+      <a herf="#">info@devstudio.com</a>
+      <a herf="#">+48 111 111 111</a>
+    </header>
+    <main><h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1></main>
+    <footer>
+      <a herf="#"> <span>Web</span>Studio</a>
+    </footer>
+  </body>
 </html>
