first index html init

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
       <a herf="#"> <span>Web</span>Studio</a>
       <nav>
         <ul>
-          <li><a herf="#">Agencja</a></li>
+          <li><a href="#">Agencja</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
-      <a herf="#">info@devstudio.com</a>
-      <a herf="#">+48 111 111 111</a>
+      <a href="#">info@devstudio.com</a>
+      <a href="#">+48 111 111 111</a>
     </header>
     <main><h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1></main>
     <footer>
-      <a herf="#"> <span>Web</span>Studio</a>
+      <a href="#"> <span>Web</span>Studio</a>
     </footer>
   </body>
 </html>
