first index html init

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a herf="#"> <span>Web</span>Studio</a>
+      <a href="#"> <span>Web</span>Studio</a>
       <nav>
         <ul>
           <li><a href="#">Agencja</a></li>
