first index html init

--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
       </nav>
       <a href="#">info@devstudio.com</a>
       <a href="#">+48 111 111 111</a>
+      <h3>LOREM IPSUM</h3>
     </header>
-    <main><h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1></main>
+    <main>
+      <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+      <h2>Czym się zajmujemy</h2>
+      <h2>Nasz zespół</h2>
+      <button type="button">Zamów usługę</button>
+    </main>
     <footer>
       <a href="#"> <span>Web</span>Studio</a>
     </footer>
