--- a/index.html
+++ b/index.html
@@ -18,11 +18,31 @@
       </nav>
       <a href="#">info@devstudio.com</a>
       <a href="#">+48 111 111 111</a>
-      <h3>LOREM IPSUM</h3>
     </header>
     <main>
       <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-      <h2>Czym się zajmujemy</h2>
+      <section>
+        <h2>Czym się zajmujemy</h2>
+        <img
+          src="/images/img.jpg"
+          alt="osoba pisząca na tablecie"
+          width="370"
+          height="294"
+        />
+        <img
+          src="/images/img (1).jpg"
+          alt="osoba trzyma telefon"
+          ="370"
+          height="294"
+        />
+        <img
+          src="images/img (2).jpg"
+          alt="pani trzyma tablet na którym wysietla sie kolorowy szesciokat"
+          h="370"
+          height="294"
+        />
+      </section>
+
       <h2>Nasz zespół</h2>
       <button type="button">Zamów usługę</button>
     </main>
