first index html init

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <img
           src="/images/img (1).jpg"
           alt="osoba trzyma telefon"
-          ="370"
+          width="370"
           height="294"
         />
         <img
           src="images/img (2).jpg"
           alt="pani trzyma tablet na którym wysietla sie kolorowy szesciokat"
-          h="370"
+          width="370"
           height="294"
         />
       </section>
