--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <section>
         <h2>Czym się zajmujemy</h2>
         <img
-          src="/images/img.jpg"
+          src="images/img.jpg"
           alt="osoba pisząca na tablecie"
           width="370"
           height="294"
         />
         <img
-          src="/images/img (1).jpg"
+          src="images/img (1).jpg"
           alt="osoba trzyma telefon"
           width="370"
           height="294"
