--- a/index.html
+++ b/index.html
@@ -21,33 +21,78 @@
     </header>
     <main>
       <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+      <button type="button">Zamów usługę</button>
       <section>
         <h2>Czym się zajmujemy</h2>
-        <img
-          src="images/img.jpg"
-          alt="osoba pisząca na tablecie"
-          width="370"
-          height="294"
-        />
-        <img
-          src="images/img (1).jpg"
-          alt="osoba trzyma telefon"
-          width="370"
-          height="294"
-        />
-        <img
-          src="images/img (2).jpg"
-          alt="pani trzyma tablet na którym wysietla sie kolorowy szesciokat"
-          width="370"
-          height="294"
-        />
+        <ul>
+          <li>
+            <img
+              src="images/img.jpg"
+              alt="osoba pisząca na tablecie"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/img (1).jpg"
+              alt="osoba trzyma telefon"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/img (2).jpg"
+              alt="pani trzyma tablet na którym wysietla sie kolorowy szesciokat"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
       </section>
 
-      <h2>Nasz zespół</h2>
-      <button type="button">Zamów usługę</button>
+      <section>
+        <h2>Nasz zespół</h2>
+        <ul>
+          <li>
+            <img
+              src="images/img (3).jpg"
+              alt="brodaty pan z okularami szeroko usmiechnięty"
+              width="270"
+              height="260"
+            />
+          </li>
+          <li>
+            <img
+              src="images/img (4).jpg"
+              alt="blondynka z okularami szeroko usmiechnięta"
+              width="270"
+              height="260"
+            />
+          </li>
+          <li>
+            <img
+              src="images/img (5).jpg"
+              alt="szeroko usmiechnięty pan"
+              width="270"
+              height="260"
+            />
+          </li>
+          <li>
+            <img
+              src="images/img (6).jpg"
+              alt="ciemny szeroko usmiechnięty pan z okularami"
+              width="270"
+              height="260"
+            />
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
       <a href="#"> <span>Web</span>Studio</a>
+      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
     </footer>
   </body>
 </html>
