first index html init

--- a/index.html
+++ b/index.html
@@ -91,8 +91,14 @@
       </section>
     </main>
     <footer>
-      <a href="#"> <span>Web</span>Studio</a>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+      <ul>
+        <li>
+          <a href="#"> <span>Web</span>Studio</a>
+        </li>
+        <li><address>m. Warszawa, Aleje Jerozolimskie 21</address></li>
+        <li><a href="#">info@devstudio.com</a></li>
+        <li><a href="#">+48 111 111 111</a></li>
+      </ul>
     </footer>
   </body>
 </html>
